tests/snapshots/regression/recovery__type_annotation_recovery.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/type_annotation_recovery.flx
exit_code: 1

• 3 errors • tests/fixtures/recovery/type_annotation_recovery.flx
error[E034]: Unexpected Token

I was expecting a type here, but I found `=`.

  tests/fixtures/recovery/type_annotation_recovery.flx:1:8
  |
1 | let x: = 1
  |        ^


error[E034]: Unexpected Token

I was expecting a type here, but I found `{`.

  tests/fixtures/recovery/type_annotation_recovery.flx:9:11
  |
9 | fn g() -> {
  |           ^

Note:
  while parsing function `g`


error[E034]: Unexpected Token

I was expecting a type here, but I found `->`.

  tests/fixtures/recovery/type_annotation_recovery.flx:14:15
   |
14 | let lam = /x: -> x
   |               ^^

Note:
  while parsing lambda expression
  Suppressed 1 cascading parser diagnostic(s) likely caused by an earlier syntax error.

Found 3 errors.
